--- a/Css/Home/homeSec2.css
+++ b/Css/Home/homeSec2.css
@@ -124,7 +124,7 @@
 
 #div_h1_sec2 h1 {
     font-size: 45px;
-    font-family: "Roboto";
+    font-family: "nunito", sans-serif;
     color: var(--links-text-cyan);;
     font-weight: bold;
     line-height: 1.2;
