--- a/Css/Services/services.css
+++ b/Css/Services/services.css
@@ -70,10 +70,67 @@
 
 }
 
+.left-hidden-element {
+    opacity: 0;
+    transform: translateX(-50vw); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .lite-left-hidden-element {
+    opacity: 0;
+    transform: translateX(-100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .right-hidden-element {
+    opacity: 0;
+    transform: translateX(800px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .lite-right-hidden-element {
+    opacity: 0;
+    transform: translateX(100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+  
+  .visible {
+    opacity: 1;
+    transform: translateX(0); /* Remet en place */
+  }
+
+
+  .bottom-hidden-element {
+    opacity: 0;
+    transform: translateY(10%); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .lite-bottom-hidden-element {
+    opacity: 0;
+    transform: translateY(100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .lite-top-hidden-element {
+    opacity: 0;
+    transform: translateY(-100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .bottom-visible {
+    opacity: 1;
+    transform: translateY(0); /* Remet en place */
+  }
+
 body {
     background: var(--bg-cyan-soft);
-    font-family: roboto, sans-serif;
+    font-family: "open sans", sans-serif;
     color: var(--hight-ctr-txt-cyan);
+}
+
+main {
+    overflow-x: hidden;
 }
 
 nav {
@@ -131,6 +188,7 @@ nav ul li {
 }
 
 .dropdown-services-content a {
+    font-family: "open sans", sans-serif;
     color: var(--links-text-cyan);
     text-align: left;
     font-weight: bold;
@@ -200,7 +258,7 @@ nav ul li a, .dropdown-content a {
     display: block;
     padding: 16px 18px;
     text-decoration: none;
-    font-family: roboto, sans-serif;
+    font-family: "open sans", sans-serif;
     font-size: 1.3em;
     font-weight: bold;
     text-transform: capitalize;
@@ -527,6 +585,7 @@ header {
 }
 
 .titre h1 {
+    font-family: "lora", serif;
     font-size: 5em;
     color: var(--links-text-cyan);
     text-transform: uppercase;
@@ -573,6 +632,7 @@ header {
 .sec1 h2 {
     font-size: 3em;
     color: var(--links-text-cyan);
+    font-family: "lora", serif;
 }
 
 
@@ -582,6 +642,11 @@ header {
 
 .sec1 h3 {
     font-size: 2em;
+    font-family: "lora", serif;
+}
+
+h2, h3 {
+    font-family: "lora", serif;
 }
 
 .bottom {
@@ -810,7 +875,6 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 
 .section7 {
     padding: 0 100px 0 100px;
-    font-family: roboto, sans-serif;
     margin-top: 60px;
 }
 
@@ -818,6 +882,7 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
     font-size: 4em;
     margin-bottom: 20px;
     color: var(--links-text-cyan);
+    font-family: "lora", serif;
 }
 
 .section7 p:first-of-type {
@@ -829,6 +894,7 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
     font-size: 1.5em;
     display: block;
     color: var(--links-text-cyan);
+    font-family: "lora", serif;
 }
 
 .datas-block {
