--- a/Css/Home/home.css
+++ b/Css/Home/home.css
@@ -277,7 +277,7 @@ nav ul li a, .dropdown-content a {
     display: block;
     padding: 16px 18px;
     text-decoration: none;
-    font-family: roboto, sans-serif;
+    font-family: "nunito", sans-serif;
     font-size: 1.3em;
     font-weight: bold;
     text-transform: capitalize;
@@ -519,7 +519,7 @@ nav ul::after {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 9fr 1fr;
-    padding: 0 10vw;
+    padding: 0 100px;
     width: 100%;
     overflow: hidden;
 }
@@ -577,7 +577,7 @@ nav ul::after {
     justify-content: center;
     font-size: 1.2em;
     color: var(--hight-ctr-txt-cyan);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;  
+    font-family: "lato", sans-serif;  
     z-index: 0;
     backdrop-filter: blur(10px);
 }
@@ -605,7 +605,7 @@ nav ul::after {
 #back_hleft h2 span{
     font-size: clamp(2.5rem, 3.5vw, 3.1em);
     text-shadow: 0 0 15px var(--cyan-interactiveComp-h);
-    font-family: "Baskervville SC", serif;
+    font-family: "nunito", sans-serif;
     font-weight: 700;
     font-style: normal;
 }
@@ -625,7 +625,7 @@ nav ul::after {
 
 #back_hleft ul li p{
     font-size: 1em;
-    font-family: Montserrat, sans-serif; 
+    font-family: "lato", sans-serif; 
     font-weight: normal;
 }
 
@@ -644,7 +644,7 @@ nav ul::after {
 
 #back_hleft #account #div_btn a {
     padding: 10px 0;  
-    font-family: roboto, sans-serif;
+    font-family: "nunito", sans-serif;
     font-size: 1.2em;
     border-radius: 25px;
     box-shadow: 0px 0px 50px 0px var(--cyan-interactiveComp-h);
@@ -750,6 +750,9 @@ nav ul::after {
     margin: auto;
     background: url('imgs/cosite.png') center no-repeat;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profil:hover {
@@ -758,12 +761,8 @@ nav ul::after {
 
 .profil img {
     border-radius: 50%;
-    width: 350px;
+    width: 100%;
     aspect-ratio: 1/1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     z-index: 2;
 }
 
@@ -776,7 +775,7 @@ nav ul::after {
 
 #head_bottom div span {
     font-weight: bold;
-    font-family: roboto, sans-serif;
+    font-family: "nunito", sans-serif;
     font-size: 3em;
     line-height: 1em;
     color: var(--links-text-cyan);
@@ -785,7 +784,7 @@ nav ul::after {
 #head_bottom div p {
     display: inline-block;
     color: var(--hight-ctr-txt-cyan);
-    font-family: Montserrat, sans-serif; 
+    font-family: "lato", sans-serif; 
 }
 
 @media screen and (width <= 1280px) {
@@ -905,20 +904,15 @@ nav ul::after {
     }
 
     #head-right img {
-        width: 250px;
-        transition: .5s linear;
+        transition: none
     }
 
     .profil {
-        width: 250px;
+        width: 350px;
     }
 
     .profil:hover {
-        transform: scale(1.2);
-    }
-
-    #head-right img:hover {
-        transform: scale(1);
+        transform: none;
     }
 
     #head_bottom {
@@ -935,10 +929,6 @@ nav ul::after {
     #back_hleft {
         gap: 50px;
     }
-
-    #head-right img {
-        width: 350px;
-    } 
 
     .profil {
         width: 350px;
@@ -958,10 +948,6 @@ nav ul::after {
     #head-left h2 {
         font-size: 1.8em;  
         text-align: center;
-    }
-
-    #head-right img {
-        width: 250px;
     }
 
     .profil {
@@ -1011,6 +997,42 @@ nav ul::after {
     
 }
 
+@media screen and (max-width: 640px) {
+    .stack {
+        width: 30px;
+    }
+
+    .profil {
+        width: 200px;
+        margin: 0;
+    }
+
+    .profil::after,  .profil::before {
+        padding: 5px;
+    }
+
+    #head-back {
+        padding-top: 10vh;
+    }
+
+    #back_hleft p {
+        margin-top: 0;
+    }
+
+    #back_hleft p:nth-of-type(3) {
+        margin-top: 20px;
+    }
+    
+    #back_hleft ul {
+        margin-bottom: 0px;
+    }
+
+    #back_hleft {
+        gap: 10px;
+    }
+
+}
+
 #barre_etat_body {
     border-width: 2px;
     border-color: var(--cyan-border-s);
@@ -1027,9 +1049,9 @@ nav ul::after {
 
 
 footer {
-    border-width: 1px;
-    border-color: var(--cyan-border-h);
-    border-style: solid;
+    border-top-width: 1px;
+    border-top-color: var(--cyan-border-h);
+    border-top-style: solid;
     background-color: var(--bg-cyan-soft);
     height: 30vh;
     align-content: center;
@@ -1037,7 +1059,7 @@ footer {
 
 footer p {
     font-size: 1.2em;
-    font-family: "Verdana";
+    font-family: "lato", sans-serif;
     color: var(--hight-ctr-txt-cyan);
     font-weight: bold;
     line-height: 1.2;
