--- a/Css/Home/homeSec1.css
+++ b/Css/Home/homeSec1.css
@@ -63,6 +63,10 @@
     --amber-interactiveComp-s: #4D3000;
 }
 
+strong {
+    font-family: "nunito", sans-serif;
+}
+
 #section_1 {
     height: 100vh;
     /* background-color: transparent; */
@@ -94,7 +98,7 @@
 
 #sec1_gauche h1 {
     font-size: 2.5em;
-    font-family: "Roboto";
+    font-family: "nunito", sans-serif;
     color: var(--links-text-cyan);
     font-weight: bold;
     line-height: 1.2;
@@ -151,7 +155,7 @@
 
 #sec1_droite p {
     font-size: 35px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "lato", sans-serif;
     color: var(--hight-ctr-txt-cyan);
     line-height: 1.2;  
     text-align: center; 
@@ -166,7 +170,7 @@
     padding: 7px 30px;
     font-size: 1.7em;
     margin: 0 auto;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "lato", sans-serif;
     color: var(--links-text-cyan);
     font-weight: bold;
     line-height: 1.2;
@@ -207,8 +211,9 @@
     }
 
     #div_all_services_sec1 {
-        display: block;
-        align-content: center;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
     }
 
     .div_services_sec1 {
@@ -247,6 +252,8 @@
 
     #sec1_gauche {
         gap: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     .div_services_sec1 {
@@ -255,5 +262,20 @@
 
     #sec1_droite p {
         font-size: 1.2em;
+    }
+}
+
+@media screen and (width <= 640px) {
+    #div_all_services_sec1 {
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        gap: 0;
+        height: auto;
+    }
+
+    #sec1_gauche {
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
