--- a/Css/Portfolio/portfolio.css
+++ b/Css/Portfolio/portfolio.css
@@ -70,8 +70,74 @@
 
 }
 
+.left-hidden-element {
+    opacity: 0;
+    transform: translateX(-50vw); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .lite-left-hidden-element {
+    opacity: 0;
+    transform: translateX(-100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .right-hidden-element {
+    opacity: 0;
+    transform: translateX(800px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .lite-right-hidden-element {
+    opacity: 0;
+    transform: translateX(100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+  
+  .visible {
+    opacity: 1;
+    transform: translateX(0); /* Remet en place */
+  }
+
+
+  .bottom-hidden-element {
+    opacity: 0;
+    transform: translateY(10%); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .lite-bottom-hidden-element {
+    opacity: 0;
+    transform: translateY(100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .lite-top-hidden-element {
+    opacity: 0;
+    transform: translateY(-100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+
+  .bottom-visible {
+    opacity: 1;
+    transform: translateY(0); /* Remet en place */
+  }
+
 body {
     background: var(--bg-amber);
+    font-family: "lato", sans-serif;
+}
+
+h1, h2, h3, a {
+    font-family: "nunito", sans-serif;
+}
+
+p {
+    font-family: "lato", sans-serif;
+}
+
+main {
+    overflow-x: hidden;
 }
 
 nav {
@@ -198,7 +264,7 @@ nav ul li a, .dropdown-content a {
     display: block;
     padding: 16px 18px;
     text-decoration: none;
-    font-family: roboto, sans-serif;
+    font-family: "nunito", sans-serif;
     font-size: 1.3em;
     font-weight: bold;
     text-transform: capitalize;
@@ -281,6 +347,7 @@ nav ul li a:active {
 }
 
 .dropdown-content a {
+    font-family: "nunito", sans-serif;
     color: var(--links-text-amber);
     text-align: left;
     font-weight: bold;
@@ -442,6 +509,8 @@ nav ul::after {
         background-color: var(--bg-amber-soft);
         transform: translateY(-800px);
         transition: transform 0.6s ease-out;
+        z-index: 2;
+        position: relative;
     }
 
     nav.active {
@@ -488,7 +557,7 @@ nav ul::after {
 
     .stack {
         display: block;
-        z-index: 1;
+        z-index: 3;
     }
 }
 
@@ -500,7 +569,7 @@ nav ul::after {
 }
 
 h2 {
-    font-family: roboto, sans-serif;
+    font-family: "nunito", sans-serif;
     font-size: 4em;
     font-weight: bold;
     margin-bottom: 20px;
@@ -509,27 +578,32 @@ h2 {
 }
 
 h3 {
-    font-family: roboto, sans-serif;
+    font-family: "nunito", sans-serif;
     font-size: 3em;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 .section1 p {
-    font-family: roboto, sans-serif;
+    font-family: "lato", sans-serif;
     font-size: 1.3em;
-    font-weight: 200;
     text-align: justify;
 }
 
-.section1 img {
-    width: 600px;
-    float: right;
-    margin-left: 20px;
-    transform: translateY(100px);
+.center-sec1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    flex-direction: row-reverse;
 }
 
-.section1::after {
+.center-sec1 img {
+    width: 600px;
+    align-self: flex-end;
+}
+
+.center-sec1::after {
     content: "";
     display: table;
     clear: both;
@@ -566,8 +640,8 @@ h3 {
         gap: 20px;
     }
 
-    .section1 img {
-        transform: translateY(0);
+    .center-sec1 img {
+        align-self: center;
     }
 }
 
@@ -613,6 +687,7 @@ h3 {
     color: var(--links-text-amber);
     font-size: 1.2em;
     font-weight: bolder;
+    font-family: "nunito", sans-serif;
 }
 
 .left {
@@ -621,9 +696,8 @@ h3 {
 }
 
 .section2 p {
-    font-family: roboto, sans-serif;
+    font-family: "lato", sans-serif;
     font-size: 1.3em;
-    font-weight: 200;
 }
 
 .section2 img {
@@ -708,7 +782,7 @@ h3 {
 }
 
 .center p {
-    font-family: roboto, sans-serif;
+    font-family: "lato", sans-serif;
     font-size: 6em;
     font-weight: bold;
     text-align: center;
@@ -766,6 +840,12 @@ h3 {
     justify-content: center;
     position: relative;
     align-items: center;
+  }
+
+  @media screen and (orientation: landscape){
+    .carousel {
+        min-height: 100vh;
+    }
   }
   
   /* Track contenant les slides */
@@ -836,7 +916,6 @@ h3 {
   .section5 p {
     font-family: roboto, sans-serif;
     font-size: 1.3em;
-    font-weight: 200;
     margin-bottom: 50px;
     text-align: justify;
   }
@@ -846,6 +925,7 @@ h3 {
     color: var(--links-text-amber);
     font-size: 1.2em;
     font-weight: bolder;
+    font-family: "nunito", sans-serif;
 }
 
   .section5 .centre {
@@ -901,7 +981,6 @@ h3 {
   .section6 p {
     font-family: roboto, sans-serif;
     font-size: 1.3em;
-    font-weight: 200;
     margin-bottom: 50px;
     text-align: justify;
   }
