quelques ajustements du texte et de contact.html

--- a/Css/Home/home.css
+++ b/Css/Home/home.css
@@ -1002,6 +1002,10 @@ nav ul::after {
         width: 30px;
     }
 
+    #head_bottom {
+        text-align: center;
+    }
+
     .profil {
         width: 200px;
         margin: 0;
