--- a/Css/Portfolio/portfolio.css
+++ b/Css/Portfolio/portfolio.css
@@ -917,7 +917,7 @@ h3 {
     font-family: roboto, sans-serif;
     font-size: 1.3em;
     margin-bottom: 50px;
-    text-align: justify;
+    text-align: left;
   }
 
   .section5 a {
@@ -982,7 +982,7 @@ h3 {
     font-family: roboto, sans-serif;
     font-size: 1.3em;
     margin-bottom: 50px;
-    text-align: justify;
+    text-align: left;
   }
 
   .section6 a {
