--- a/Css/About/about.css
+++ b/Css/About/about.css
@@ -616,7 +616,7 @@ main {
     width: 90%;
     display: flex;
     flex-direction: column;
-    margin: 60px 0 60px 0;
+    margin: 20px 0 60px 0;
     gap: 20px;
 }
 
@@ -663,6 +663,7 @@ main {
     width: 50%;
     height: 50%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -673,6 +674,11 @@ main {
     color: var(--hight-ctr-txt-amber);
     font-weight: bold;
     text-shadow: 0 0 5px var(--amber-interactiveComp-h);
+}
+
+.numbers div p:last-child {
+    font-size: 1.3em;
+    font-weight: normal;
 }
 
 .my-works {
@@ -872,6 +878,10 @@ main {
     .numbers div p {
         font-size: 3em;
     }
+
+    .numbers div p:last-child {
+    text-align: center;
+}
 }
 
 @media screen and (max-width: 800px){
