--- a/Css/Contact/contact.css
+++ b/Css/Contact/contact.css
@@ -85,7 +85,7 @@ body {
 nav {
     position: absolute;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 nav ul {
@@ -464,6 +464,7 @@ nav ul::after {
 .div-form.unroll {
     min-height: 85vh;
     opacity: 1;
+    z-index: 1;
 }
 
 form.unroll * {
@@ -714,9 +715,17 @@ form button:active {
       }  
 
     .div-form.unroll {
-        min-height: 85vh;
+        min-height: 625px;
+        height: 85vh;
         max-width: 350px;
         width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    form {
+        width: 100%;
     }
 
     form button {
