--- a/Css/Portfolio/portfolio.css
+++ b/Css/Portfolio/portfolio.css
@@ -587,7 +587,7 @@ h3 {
 .section1 p {
     font-family: "lato", sans-serif;
     font-size: 1.3em;
-    text-align: justify;
+    text-align: left;
 }
 
 .center-sec1 {
