--- a/Css/Home/home.css
+++ b/Css/Home/home.css
@@ -1,4 +1,3 @@
-
 *, *::before, *::after {
     padding: 0;
     margin: 0;
@@ -563,20 +562,9 @@ nav ul::after {
     backdrop-filter: blur(10px);
 }
 
-/* <uniquifier>: Use a unique and descriptive class name*/
-/* <weight>: Use a value from 400 to 700
-
-.dancing-script-<uniquifier> {
-  font-family: "Dancing Script", cursive;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-}*/
-
 #back_hleft h2 {
     font-size: 2em;
-    font-family: "Dancing Script", cursive;
-    font-optical-sizing: auto;
+    font-family: cursive;
     font-weight: 700;
     text-align: left;
     font-style: normal;  
@@ -592,8 +580,7 @@ nav ul::after {
 }
 
 #back_hleft p {
-    font-family: "Dancing Script", cursive;
-    font-optical-sizing: auto;
+    font-family: cursive;
     font-weight: 700;
     font-style: normal;  
     margin-top: 20px;
